--- a/vignettes/BSTZINB_vignette.Rmd
+++ b/vignettes/BSTZINB_vignette.Rmd
@@ -140,9 +140,18 @@ pzero <- length(y[y==0])/N             # Proportion of zeros
 # quantile(y)
 
 
-this_dat <- data.frame(sid,tid,y,X)
+this_dat <- data.frame(sid,tid,y,X[,-1])
+colnames(this_dat) <- c("sid","tid","y","x")
+# data(synth_dat_IA)
+# this_dat <- synth_dat_IA
 head(this_dat)
 tbl_summary(this_dat) %>% modify_header(label = "**Coefficients**")
+
+# Make local copies
+y <- this_dat$y
+sid <- this_dat$sid
+tid <- this_dat$tid
+X <- cbind(1,this_dat$x)
 ```
 
 Once we have generated the data, we shall now use the functions available in our package on this data.
@@ -163,7 +172,7 @@ We can additionally make histograms and spaghetti plots and Moran's I:
 
 ```{r}
 # blue histogram
-tmp <- table(y)/N*100  # convert to %s (divide by N multiply by 100)
+tmp <- table(this_dat$y)/N*100  # convert to %s (divide by N multiply by 100)
 oldpar <- par(no.readonly = TRUE)
 par(mar=c(3,3,1,1))
 barplot(tmp, ylab="Percent",xlab="Count",col="lightblue")
